# learn-salome

./: readme.md
first_app/: CMakeLists.txt  README  Salomefirst_appConfig.cmake.in  build.sh  readme.md
first_app/adm_local/: CMakeLists.txt
first_app/adm_local/cmake_files/: CMakeLists.txt  FindSalomefirst_app.cmake
first_app/adm_local/unix/: CMakeLists.txt
first_app/adm_local/unix/config_files/: CMakeLists.txt  check_first_app.m4
first_app/doc/: CMakeLists.txt  doxyfile.in
first_app/doc/input/: index.doc
first_app/doc/static/: header.html.in
first_app/idl/: CMakeLists.txt  first_app_Gen.idl
first_app/resources/: CMakeLists.txt  SalomeApp.xml.in  first_appCatalog.xml.in  schema.xml
first_app/src/: CMakeLists.txt
first_app/src/first_app/: CMakeLists.txt  first_app.py  first_app_utils.py
first_app/src/first_appGUI/: CMakeLists.txt  first_appGUI.py  first_app_icons.ts  first_app_msg_ja.ts
fish_app/: CMakeLists.txt  Salomefish_appConfig.cmake.in  build.sh  readme.md
fish_app/adm_local/cmake_files/: CMakeLists.txt  FindSalomefish_app.cmake
fish_app/adm_local/unix/config_files/: CMakeLists.txt  check_fish_app.m4
fish_app/resources/: CMakeLists.txt  SalomeApp.xml.in
fish_app/src/: CMakeLists.txt  fish_appGUI.py
fish_plugin/: fish_plugin.py
light_app/: CMakeLists.txt  README  build.sh  readme.md
light_app/adm_local/cmake_files/: CMakeLists.txt  FindSalomelight_app.cmake
light_app/adm_local/unix/: CMakeLists.txt
light_app/adm_local/unix/config_files/: CMakeLists.txt  check_light_app.m4
light_app/resources/: CMakeLists.txt  LightApp.xml  SalomeApp.xml.in  light_app_en.xml  queen.txt
light_app/src/: CMakeLists.txt
light_app/src/light_appGUI/: CMakeLists.txt  light_appGUI.py  light_app_DataModel.py  light_app_icons.ts
mesh_app/: CMakeLists.txt  build.sh  readme.md
mesh_app/adm_local/: CMakeLists.txt
mesh_app/adm_local/cmake_files/: CMakeLists.txt  FindSalomemesh_app.cmake
mesh_app/adm_local/unix/config_files/: CMakeLists.txt  check_mesh_app.m4
mesh_app/resources/: CMakeLists.txt  SalomeApp.xml.in
mesh_app/src/: CMakeLists.txt  export_salome_mesh.py  mesh_appGUI.py
